# pypi-python-template

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  license.md
pypi_python_template/: __init__.py  function.py
scripts/: lint.sh  test.sh  test_html.sh
tests/: test_function.py  test_version.py
